	- ADDED: Vector2Min, Vector2Max, Vector2Refract, Vector3MoveTowards, Vector3CubicHermite,
	QuaternionCubicHermiteSpline, MatrixDecompose and Vector4* functions.
	- ADDED: RL.config function.
	- ADDED: InitWindow. Can be called from RL.config. If not, will be called automatically before RL.init.
	(Curiously InitWindow is function #1057. Before that it was only called automatically.)

------------------------------------------------------------------------
Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGE: Process renamed to update to be more inline with naming of raylib and common convention.
	- ADDED: apiScanner.lua for searching unimplemented functions from raylib.
	- ADDED Automation events.
	- CHANGE: Raygui lib callbacks to single table.
	- ADDED OpenGL Stencil management functions.
	- CHANGE: Object libraries like Vector2 optimizations. Separated table argument style for new and set methods.
	Option for pre generated temp objects. There was a lot of overhead on old new method.
	- CHANGE: Use GetApplicationDirectory instead of GetWorkingDirectory for basePath if no path argument given.
	- ADDED Userdata objects can be passed in table. Useful on wrapper libraries. Name should be in camelCase.

DETAILED CHANGES:
	- ADDED: GetBufferElementSize and GetBufferLength.
	- FIXED: Compress_data example.
	- FIXED: GuiGetFont return lightuserdata.
	- FIXED: GuiSetStyle, GuiLoadStyle and GuiLoadStyleDefault sets state->guiDefaultFont to GuiGetFont.
	- ADDED: TextFindIndex.
	- FIXED: SeekMusicStream was not assigned.
	- ADDED: rlEnableStatePointer and rlDisableStatePointer for GRAPHICS_API_OPENGL_11.
	- ADDED: rlBlitFramebuffer and rlEnablePointMode.
	- ADDED: Vector3Project and Vector3Reject.
	- ADDED: IsKeyPressedRepeat, IsGamepadButtonUp, GetGamepadButtonPressed and GetMouseWheelMoveV.
	- ADDED: ImageDrawText.
	- ADDED: DrawTextureEx.